--- a/GAM/GAM/Sources/Base.lproj/LaunchScreen.storyboard
+++ b/GAM/GAM/Sources/Base.lproj/LaunchScreen.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22155" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22131"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -18,15 +18,15 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="gamLogoKorean" translatesAutoresizingMaskIntoConstraints="NO" id="tfO-r6-djt">
-                                <rect key="frame" x="141.66666666666666" y="388" width="110" height="76"/>
+                                <rect key="frame" x="141.66666666666666" y="362.66666666666669" width="110" height="127"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="110" id="4FT-Rz-erD"/>
-                                    <constraint firstAttribute="height" constant="75.739999999999995" id="x3x-xK-ahd"/>
+                                    <constraint firstAttribute="height" constant="127" id="x3x-xK-ahd"/>
                                 </constraints>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" name="gamBlack"/>
+                        <color key="backgroundColor" name="gamBlackLogo"/>
                         <constraints>
                             <constraint firstItem="tfO-r6-djt" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="YPT-1W-iWD"/>
                             <constraint firstItem="tfO-r6-djt" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="uHQ-7e-QLk"/>
@@ -39,9 +39,9 @@
         </scene>
     </scenes>
     <resources>
-        <image name="gamLogoKorean" width="111" height="76"/>
-        <namedColor name="gamBlack">
-            <color red="0.21600000560283661" green="0.21600000560283661" blue="0.21600000560283661" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <image name="gamLogoKorean" width="110" height="128"/>
+        <namedColor name="gamBlackLogo">
+            <color red="0.10196078431372549" green="0.10196078431372549" blue="0.10196078431372549" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
